--- a/index.html
+++ b/index.html
@@ -3,12 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.css"
-      integrity="sha512-gA2Bvu0/hw4oj0Lp8ZHjK+o3S4BE5m8d/wNVy6ktKLhHKPpWLQwv9ixzuWirWOakoJqlBdePq2NhoCaUOQ5npQ=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -23,190 +21,219 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/style.css" />
-    <title>Document</title>
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="./index.html" class="logo"
-          >Web<span class="logo-text-2">Studio</span></a
-        >
-        <ul>
-          <li class="list-logo">
-            <a href="./index.html" class="link-logo">Studio</a>
-          </li>
-          <li class="list-logo">
-            <a href="" class="link-logo">Portfolio</a>
-          </li>
-          <li class="list-logo">
-            <a href="" class="link-logo">Contacts</a>
-          </li>
-        </ul>
-      </nav>
-      <address class="contacts">
-        <ul>
-          <li>
-            <a href="mailto:info@devstudio.com" class="list-contacts"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a href="tel:+110001111111" class="list-contacts"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+    <!-----Header----->
+    <header class="header-box">
+      <div class="container container-menu">
+        <nav class="page-nav">
+          <a class="logo" href="./index.html"
+            >Web<span class="logo-word">Studio</span></a
+          >
+          <ul class="menu">
+            <li class="menu-item">
+              <a class="link" href="./index.html">Studio</a>
+            </li>
+            <li class="menu-item"><a class="link" href="">Portfolio</a></li>
+            <li class="menu-item"><a class="link" href="">Contacts</a></li>
+          </ul>
+        </nav>
+        <address class="contacts-page" id="Contacts">
+          <ul class="contacts-box">
+            <li class="contact-item">
+              <a class="link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="contact-item">
+              <a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <main>
-      <section class="hero-image">
-        <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button type="button" class="hero-button">Order Service</button>
+      <!-----1 section----->
+      <section class="title-hero">
+        <div class="container">
+          <h1 class="title">Effective Solutions for Your Business</h1>
+          <button class="button-service" type="button">Order Service</button>
+        </div>
       </section>
-      <section class="section-1">
-        <h2 class="section-name">Section 2</h2>
-        <ul>
-          <li class="list-section-1">
-            <h3 class="point-list">Strategy</h3>
-            <p class="paragraf-list">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li class="list-section-1">
-            <h3 class="point-list">Punctuality</h3>
-            <p class="paragraf-list">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li class="list-section-1">
-            <h3 class="point-list">Diligence</h3>
-            <p class="paragraf-list">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li class="list-section-1">
-            <h3 class="point-list">Technologies</h3>
-            <p class="paragraf-list">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+      <!-----2 section----->
+      <section class="benefits-page">
+        <div class="container">
+          <h2 class="visually-hidden">Our Benefits</h2>
+          <ul class="benefits-list">
+            <li class="benefits-list-item">
+              <h3 class="title-benefits">Strategy</h3>
+              <p class="text-benefits">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="benefits-list-item">
+              <h3 class="title-benefits">Punctuality</h3>
+              <p class="text-benefits">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="benefits-list-item">
+              <h3 class="title-benefits">Diligence</h3>
+              <p class="text-benefits">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="benefits-list-item">
+              <h3 class="title-benefits">Technologies</h3>
+              <p class="text-benefits">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
-      <section class="section-our-team">
-        <h2 class="our-section">Our Team</h2>
-        <ul>
-          <li class="list-section-team">
-            <img
-              src="./images/MarkGuerrero.jpg"
-              alt="Mark Guerrero"
-              width="264"
-            />
-            <h3 class="partner-team">Mark Guerrero</h3>
-            <p class="job-name">Product Designer</p>
-          </li>
-          <li class="list-section-team">
-            <img src="./images/TomFord.jpg" alt="Tom Ford" width="264" />
-            <h3 class="partner-team">Tom Ford</h3>
-            <p class="job-name">Frontend Developer</p>
-          </li>
-          <li class="list-section-team">
-            <img
-              src="./images/CamilaGarcia.jpg"
-              alt="Camila Garcia"
-              width="264"
-            />
-            <h3 class="partner-team">Camila Garcia</h3>
-            <p class="job-name">Marketing</p>
-          </li>
-          <li class="list-section-team">
-            <img
-              src="./images/DanielWilson.jpg"
-              alt="Daniel Wilson"
-              width="264"
-            />
-            <h3 class="partner-team">Daniel Wilson</h3>
-            <p class="job-name">UI Designer</p>
-          </li>
-        </ul>
+      <!-----3 section----->
+      <section class="our-team-page">
+        <div class="container">
+          <h2 class="title-team" id="Portfolio">Our Team</h2>
+          <ul class="our-team-list">
+            <li class="team-list-item">
+              <img
+                src="./images/MarkGuerrero.jpg"
+                alt="Mark Guerrero avatar"
+                width="264"
+              />
+              <div class="avatar-information">
+                <h3 class="title-avatar">Mark Guerrero</h3>
+                <p class="text-avatar">Product Designer</p>
+              </div>
+            </li>
+            <li class="team-list-item">
+              <img
+                src="./images/TomFord.jpg"
+                alt="Tom Ford avatar"
+                width="264"
+              />
+              <div class="avatar-information">
+                <h3 class="title-avatar">Tom Ford</h3>
+                <p class="text-avatar">Frontend Developer</p>
+              </div>
+            </li>
+            <li class="team-list-item">
+              <img
+                src="./images/CamilaGarcia.jpg"
+                alt="Camila Garcia avatar"
+                width="264"
+              />
+              <div class="avatar-information">
+                <h3 class="title-avatar">Camila Garcia</h3>
+                <p class="text-avatar">Marketing</p>
+              </div>
+            </li>
+            <li class="team-list-item">
+              <img
+                src="./images/DanielWilson.jpg"
+                alt="Daniel Wilson avatar"
+                width="264"
+              />
+              <div class="avatar-information">
+                <h3 class="title-avatar">Daniel Wilson</h3>
+                <p class="text-avatar">UI Designer</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
-      <section class="section-3">
-        <h2 class="name-section">Our Portfolio</h2>
-        <ul>
-          <li class="list-our-1">
-            <img
-              class="our-image"
-              src="./images/banking-app.jpg"
-              alt="Banking App"
-              width="360"
-            />
-            <h3 class="piont-our">Banking App</h3>
-            <p class="paragraf-our">App</p>
-          </li>
-          <li class="list-our-1">
-            <img
-              class="our-image"
-              src="./images/cashless-payment.jpg"
-              alt="Cashless Payment"
-              width="360"
-            />
-            <h3 class="piont-our">Cashless Payment</h3>
-            <p class="paragraf-our">Marketing</p>
-          </li>
-          <li class="list-our-1">
-            <img
-              class="our-image"
-              src="./images/meditation-app.jpg"
-              alt="Meditation App"
-              width="360"
-            />
-            <h3 class="piont-our">Meditation App</h3>
-            <p class="paragraf-our">App</p>
-          </li>
-          <li class="list-our-2">
-            <img
-              class="our-image"
-              src="./images/taxi-service.jpg"
-              alt="Taxi Service"
-              width="360"
-            />
-            <h3 class="piont-our">Taxi Service</h3>
-            <p class="paragraf-our">Marketing</p>
-          </li>
-          <li class="list-our-2">
-            <img
-              class="our-image"
-              src="./images/screen-illustrations.jpg"
-              alt="Screen Illustrations"
-              width="360"
-            />
-            <h3 class="piont-our">Screen Illustrations</h3>
-            <p class="paragraf-our">Design</p>
-          </li>
-          <li class="list-our-2">
-            <img
-              class="our-image"
-              src="./images/online-courses.jpg"
-              alt="Online Courses"
-              width="360"
-            />
-            <h3 class="piont-our">Online Courses</h3>
-            <p class="paragraf-our">Marketing</p>
-          </li>
-        </ul>
+      <!-----4 section----->
+      <section class="our-portfolio-page">
+        <div class="container">
+          <h2 class="title-portfolio">Our Portfolio</h2>
+          <ul class="portfolio-list">
+            <li class="portfolio-item">
+              <img
+                src="./images/banking-app.jpg"
+                alt="Banking App"
+                width="360"
+              />
+              <div class="app-information">
+                <h3 class="title-images">Banking App</h3>
+                <p class="text-images">App</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img
+                src="./images/cashless-payment.jpg"
+                alt="Cashless Payment"
+                width="360"
+              />
+              <div class="app-information">
+                <h3 class="title-images">Cashless Payment</h3>
+                <p class="text-images">Marketing</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img
+                src="./images/meditation-app.jpg"
+                alt="Meditation App"
+                width="360"
+              />
+              <div class="app-information">
+                <h3 class="title-images">Meditation App</h3>
+                <p class="text-images">App</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img
+                src="./images/taxi-service.jpg"
+                alt="Taxi Service"
+                width="360"
+              />
+              <div class="app-information">
+                <h3 class="title-images">Taxi Service</h3>
+                <p class="text-images">Marketing</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img
+                src="./images/screen-illustrations.jpg"
+                alt="Screen Illustrations"
+                width="360"
+              />
+              <div class="app-information">
+                <h3 class="title-images">Screen Illustrations</h3>
+                <p class="text-images">Design</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img
+                src="./images/online-courses.jpg"
+                alt="Online Courses"
+                width="360"
+              />
+              <div class="app-information">
+                <h3 class="title-images">Online Courses</h3>
+                <p class="text-images">Marketing</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
-    <footer class="footer">
-      <a href="./index.html" class="logo"
-        >Web<span class="studio">Studio</span></a
-      >
-      <p class="footer-paragraf">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+    <!-----Footer----->
+    <footer class="footer-box">
+      <div class="container">
+        <a class="logo logo-footer" href="./index.html"
+          >Web<span class="logo-word-footer">Studio</span></a
+        >
+        <p class="text-footer">
+          Increase the flow of customers and sales for your business with
+          digital marketing &amp; growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
